--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
+                <a-plane position="0 0 -4" rotation="-90 0 0" width="4" color="#7BC8A4"></a-plane>
+                >
                 <a-image
                     src="assets/mBot.gif"
                     scale="1 1 1"
