--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
-              <a-entity position="-1 0 0" rotation="-90 0 0" scale="1.3 1.3 1.3" geometry="primitive: plane;" material="shader:gif;src:url(https://raw.https://github.com/fredbailly/AR1/Test-AR/mBot.gif)"></a-entity>
+              <a-entity position="-1 0 0" rotation="-90 0 0" scale="1.3 1.3 1.3" geometry="primitive: plane;" material="shader:gif;src:url(https://raw.githubusercontent.com/fredbailly/AR1/Test-AR/mBot.gif)"></a-entity>
                 >
                 <a-image
                     src="assets/mBot.gif"
